# setuptools-nodejs

./: .gitignore  .gitlab-ci.yml  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-test-pypi.yml  test.yml
examples/vue-helloworld/: README.md  __init__.py  pyproject.toml
examples/vue-helloworld-setuppy/: MANIFEST.in  README.md  setup.py
examples/vue-helloworld-setuppy/browser/: index.html  package.json
examples/vue-helloworld-setuppy/vue_helloworld_setuppy/: __init__.py
examples/vue-helloworld/browser/: package-lock.json
examples/vue-helloworld/python/vue-helloworld/: __init__.py
src/setuptools_nodejs/: __init__.py  _utils.py  build.py  clean.py  command.py  extension.py  setuptools_ext.py  version.py
tests/: test_build.py  test_clean.py  test_command.py  test_examples_integration.py  test_extension.py  test_setuppy_integration.py  test_setuptools_ext.py  test_utils.py
